check for data types and store non-numeric data in a list

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -2719,7 +2719,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "26f11d8e",
+   "id": "5ab53e98",
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f7d66a38",
+   "id": "8107bef9",
    "metadata": {},
    "source": [
     "### Data Pre-Processing\n",
@@ -2759,7 +2759,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "b5b539f4",
+   "id": "bb676775",
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d9224763",
+   "id": "dc1e397a",
    "metadata": {},
    "source": [
     "### Checking NULL values in the dataset"
@@ -2796,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "5106c017",
+   "id": "67abbf4e",
    "metadata": {},
    "outputs": [
     {
@@ -2830,16 +2830,316 @@
   },
   {
    "cell_type": "markdown",
-   "id": "0bc34bbb",
+   "id": "7b2dda8b",
    "metadata": {},
    "source": [
-    "The code returns the total of all non missing values cantained in the dataset.This informat"
+    "The code returns the total of all non missing values cantained in the dataset.This information is valuable for data analysis and processing, as having complete data without missing values."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "51099954",
+   "metadata": {},
+   "source": [
+    "## DATA TRANSFORMATION\n",
+    "\n",
+    "### Label Encoding\n",
+    "Some attributes are categorical, therefore (statistical) analysis on those variables is not possible. We need to convert all categorical variables (string labels) into numeric by encoding the categories. Package 'sklearn' provides 'LabelEncoder' library for encoding labels between 0 to n-1 discrete values/labels, where n is the number of values/labels. E.g.: Male -> 0 Female ->\n",
+    "1"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 55,
+   "id": "54602de7",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# importing LabelEncoder from sklearn.preprocessing library\n",
+    "from sklearn.preprocessing import LabelEncoder "
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 56,
+   "id": "197b89ea",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/html": [
+       "<div>\n",
+       "<style scoped>\n",
+       "    .dataframe tbody tr th:only-of-type {\n",
+       "        vertical-align: middle;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe tbody tr th {\n",
+       "        vertical-align: top;\n",
+       "    }\n",
+       "\n",
+       "    .dataframe thead th {\n",
+       "        text-align: right;\n",
+       "    }\n",
+       "</style>\n",
+       "<table border=\"1\" class=\"dataframe\">\n",
+       "  <thead>\n",
+       "    <tr style=\"text-align: right;\">\n",
+       "      <th></th>\n",
+       "      <th>age</th>\n",
+       "      <th>workclass</th>\n",
+       "      <th>education</th>\n",
+       "      <th>education-num</th>\n",
+       "      <th>marital status</th>\n",
+       "      <th>occupation</th>\n",
+       "      <th>relationship</th>\n",
+       "      <th>race</th>\n",
+       "      <th>sex</th>\n",
+       "      <th>capital gain</th>\n",
+       "      <th>capital loss</th>\n",
+       "      <th>hours per week</th>\n",
+       "      <th>native country</th>\n",
+       "      <th>class label</th>\n",
+       "    </tr>\n",
+       "  </thead>\n",
+       "  <tbody>\n",
+       "    <tr>\n",
+       "      <th>22453</th>\n",
+       "      <td>24</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Some-college</td>\n",
+       "      <td>10</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>14244</th>\n",
+       "      <td>41</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Craft-repair</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>6229</th>\n",
+       "      <td>36</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Never-married</td>\n",
+       "      <td>Adm-clerical</td>\n",
+       "      <td>Not-in-family</td>\n",
+       "      <td>Black</td>\n",
+       "      <td>Female</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>40</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>31328</th>\n",
+       "      <td>31</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>HS-grad</td>\n",
+       "      <td>9</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Other-service</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>0</td>\n",
+       "      <td>35</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&lt;=50K</td>\n",
+       "    </tr>\n",
+       "    <tr>\n",
+       "      <th>21040</th>\n",
+       "      <td>30</td>\n",
+       "      <td>Private</td>\n",
+       "      <td>Bachelors</td>\n",
+       "      <td>13</td>\n",
+       "      <td>Married-civ-spouse</td>\n",
+       "      <td>Prof-specialty</td>\n",
+       "      <td>Husband</td>\n",
+       "      <td>White</td>\n",
+       "      <td>Male</td>\n",
+       "      <td>0</td>\n",
+       "      <td>1902</td>\n",
+       "      <td>55</td>\n",
+       "      <td>United-States</td>\n",
+       "      <td>&gt;50K</td>\n",
+       "    </tr>\n",
+       "  </tbody>\n",
+       "</table>\n",
+       "</div>"
+      ],
+      "text/plain": [
+       "       age workclass      education  education-num       marital status   \n",
+       "22453   24   Private   Some-college             10        Never-married  \\\n",
+       "14244   41   Private        HS-grad              9   Married-civ-spouse   \n",
+       "6229    36   Private        HS-grad              9        Never-married   \n",
+       "31328   31   Private        HS-grad              9   Married-civ-spouse   \n",
+       "21040   30   Private      Bachelors             13   Married-civ-spouse   \n",
+       "\n",
+       "            occupation    relationship    race      sex  capital gain   \n",
+       "22453     Adm-clerical   Not-in-family   White   Female             0  \\\n",
+       "14244     Craft-repair         Husband   White     Male             0   \n",
+       "6229      Adm-clerical   Not-in-family   Black   Female             0   \n",
+       "31328    Other-service         Husband   White     Male             0   \n",
+       "21040   Prof-specialty         Husband   White     Male             0   \n",
+       "\n",
+       "       capital loss  hours per week  native country class label  \n",
+       "22453             0              40   United-States       <=50K  \n",
+       "14244             0              40   United-States       <=50K  \n",
+       "6229              0              40   United-States       <=50K  \n",
+       "31328             0              35   United-States       <=50K  \n",
+       "21040          1902              55   United-States        >50K  "
+      ]
+     },
+     "execution_count": 56,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "4033717d",
+   "metadata": {},
+   "source": [
+    "First we preview the data to see if it has been loaded with the correct colummns.The column names are correct, and that the data types have been interpreted correctly"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 57,
+   "id": "cbbee1ae",
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "age                int64\n",
+       "workclass         object\n",
+       "education         object\n",
+       "education-num      int64\n",
+       "marital status    object\n",
+       "occupation        object\n",
+       "relationship      object\n",
+       "race              object\n",
+       "sex               object\n",
+       "capital gain       int64\n",
+       "capital loss       int64\n",
+       "hours per week     int64\n",
+       "native country    object\n",
+       "class label       object\n",
+       "dtype: object"
+      ]
+     },
+     "execution_count": 57,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data.dtypes"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "55dbbd29",
+   "metadata": {},
+   "source": [
+    "Here we check the types of data stored within the columns of the data set"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 62,
+   "id": "fba0a000",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "['workclass', 'education', 'marital status', 'occupation', 'relationship', 'race', 'sex', 'native country', 'class label']\n"
+     ]
+    }
+   ],
+   "source": [
+    "columns = list(data.select_dtypes(exclude = ['int64']))\n",
+    "print(columns)"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "76858996",
+   "metadata": {},
+   "source": [
+    "The code returns a list of all the columns that have no numeric values. It excludes the columns that have a numeric value."
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 64,
+   "id": "29ac24e2",
+   "metadata": {},
+   "outputs": [
+    {
+     "data": {
+      "text/plain": [
+       "class label\n",
+       " <=50K    22779\n",
+       " >50K      7221\n",
+       "Name: count, dtype: int64"
+      ]
+     },
+     "execution_count": 64,
+     "metadata": {},
+     "output_type": "execute_result"
+    }
+   ],
+   "source": [
+    "data['class label'].value_counts()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b94c7722",
+   "metadata": {},
+   "source": [
+    "The output shows that 22779 earn equal to or below 50,000 and only 7221 earning above 50,000"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "b35a98e1",
+   "id": "8f182cb6",
    "metadata": {},
    "outputs": [],
    "source": []
