--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -2719,7 +2719,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "1c46d036",
+   "id": "4d2103c3",
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7b3bebc4",
+   "id": "2308443c",
    "metadata": {},
    "source": [
     "### Data Pre-Processing\n",
@@ -2759,7 +2759,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "2d4bb6f1",
+   "id": "ae0e15e9",
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e6429aa2",
+   "id": "69be4975",
    "metadata": {},
    "source": [
     "### Checking NULL values in the dataset"
@@ -2796,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "af5e2b70",
+   "id": "ab6dfec7",
    "metadata": {},
    "outputs": [
     {
@@ -2830,7 +2830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "88e795e8",
+   "id": "92b586a8",
    "metadata": {},
    "source": [
     "The code returns the total of all non missing values cantained in the dataset.This information is valuable for data analysis and processing, as having complete data without missing values."
@@ -2838,7 +2838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a5032692",
+   "id": "2f77dc78",
    "metadata": {},
    "source": [
     "## DATA TRANSFORMATION\n",
@@ -2851,7 +2851,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "f2316f21",
+   "id": "56dfdf68",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2862,7 +2862,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "5dbf1623",
+   "id": "9a1ef67d",
    "metadata": {},
    "outputs": [
     {
@@ -3026,7 +3026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2af8548a",
+   "id": "aee49df2",
    "metadata": {},
    "source": [
     "First we preview the data to see if it has been loaded with the correct colummns.The column names are correct, and that the data types have been interpreted correctly"
@@ -3035,7 +3035,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "28146b4d",
+   "id": "d0b99aa6",
    "metadata": {
     "scrolled": true
    },
@@ -3071,7 +3071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "4b14336d",
+   "id": "c8c885ba",
    "metadata": {},
    "source": [
     "Here we check the types of data stored within the columns of the data set"
@@ -3080,7 +3080,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "54b3cbe5",
+   "id": "3005633b",
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5d71ad63",
+   "id": "bcae40bd",
    "metadata": {},
    "source": [
     "The code returns a list of all the columns that have no numeric values. It excludes the columns that have a numeric value."
@@ -3107,7 +3107,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "f782a916",
+   "id": "68de5bb7",
    "metadata": {},
    "outputs": [
     {
@@ -3130,7 +3130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "01f60dd8",
+   "id": "3714623b",
    "metadata": {},
    "source": [
     "The output shows that 22779 earn equal to or below 50,000 and only 7221 earning above 50,000"
@@ -3139,7 +3139,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "1c2c500e",
+   "id": "0dc8d642",
    "metadata": {},
    "outputs": [
     {
@@ -3173,7 +3173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d4ab51f9",
+   "id": "5e1e0c1b",
    "metadata": {},
    "source": [
     "LabelEncoder() object from the sklearn.preprocessing package is imported in this code.The categorical data in each column of the data DataFrame is then encoded as numerical labels using a LabelEncoder object by iterating over each column in a loop. The data in each column are transformed into encoded labels by fitting the encoder to them using the fit transform() method.The data types of each column after encoding are displayed in the data DataFrame's dtypes attribute, which is printed last."
@@ -3182,7 +3182,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "26a4ad15",
+   "id": "a51db009",
    "metadata": {},
    "outputs": [
     {
@@ -3346,7 +3346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "2450b1c5",
+   "id": "951d9470",
    "metadata": {},
    "source": [
     "non-numeric values transformed to numerical values"
@@ -3355,7 +3355,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "2354b923",
+   "id": "51cf41e9",
    "metadata": {},
    "outputs": [
     {
@@ -3385,7 +3385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d81be203",
+   "id": "0eb6ed83",
    "metadata": {},
    "source": [
     "All the values are now numeric. Now, more computations and analysis can be performed on the dataset."
@@ -3394,7 +3394,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "f767f729",
+   "id": "2d179b91",
    "metadata": {},
    "outputs": [
     {
@@ -3424,7 +3424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "83addae3",
+   "id": "50615b57",
    "metadata": {},
    "source": [
     "The histogram generated shows the education distribution, the x-axis represents the values of the variable and the y-axis represents the frequency of occurrence. In this case, the histogram shows the frequency of\n",
@@ -3434,7 +3434,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "694c50f1",
+   "id": "e78365f0",
    "metadata": {},
    "outputs": [
     {
@@ -3667,13 +3667,19 @@
    ]
   },
   {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e96acbf2",
+   "cell_type": "markdown",
+   "id": "1bd48795",
    "metadata": {},
-   "outputs": [],
    "source": [
-    "The command returns the statis"
+    "The command returns the statistical summary of all the numerical values in the dataset"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "d5b8a0e3",
+   "metadata": {},
+   "source": [
+    "## End of Notebook"
    ]
   }
  ],
