add summary report of the notebook

--- a/DATA  ANALYSIS WITH PANDAS.ipynb
+++ b/DATA  ANALYSIS WITH PANDAS.ipynb
@@ -2719,7 +2719,7 @@
   {
    "cell_type": "code",
    "execution_count": 47,
-   "id": "164b34d5",
+   "id": "4fe4d498",
    "metadata": {},
    "outputs": [
     {
@@ -2749,7 +2749,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5b8392ce",
+   "id": "066854a0",
    "metadata": {},
    "source": [
     "### Data Pre-Processing\n",
@@ -2759,7 +2759,7 @@
   {
    "cell_type": "code",
    "execution_count": 48,
-   "id": "ef8868eb",
+   "id": "92520995",
    "metadata": {},
    "outputs": [
     {
@@ -2787,7 +2787,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "1e47562d",
+   "id": "57c82ecd",
    "metadata": {},
    "source": [
     "### Checking NULL values in the dataset"
@@ -2796,7 +2796,7 @@
   {
    "cell_type": "code",
    "execution_count": 52,
-   "id": "3673dacb",
+   "id": "f13f5e65",
    "metadata": {},
    "outputs": [
     {
@@ -2830,7 +2830,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e7bb63ac",
+   "id": "001ac4b2",
    "metadata": {},
    "source": [
     "The code returns the total of all non missing values cantained in the dataset.This information is valuable for data analysis and processing, as having complete data without missing values."
@@ -2838,7 +2838,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "95faf503",
+   "id": "bd937f3b",
    "metadata": {},
    "source": [
     "## DATA TRANSFORMATION\n",
@@ -2851,7 +2851,7 @@
   {
    "cell_type": "code",
    "execution_count": 55,
-   "id": "cdd9369a",
+   "id": "efa75c9b",
    "metadata": {},
    "outputs": [],
    "source": [
@@ -2862,7 +2862,7 @@
   {
    "cell_type": "code",
    "execution_count": 56,
-   "id": "b311511e",
+   "id": "4887dc31",
    "metadata": {},
    "outputs": [
     {
@@ -3026,7 +3026,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "e3333415",
+   "id": "ccbdc32b",
    "metadata": {},
    "source": [
     "First we preview the data to see if it has been loaded with the correct colummns.The column names are correct, and that the data types have been interpreted correctly"
@@ -3035,7 +3035,7 @@
   {
    "cell_type": "code",
    "execution_count": 57,
-   "id": "8b4578cc",
+   "id": "d203ab49",
    "metadata": {
     "scrolled": true
    },
@@ -3071,7 +3071,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "dd70fd2c",
+   "id": "bd6c0a5f",
    "metadata": {},
    "source": [
     "Here we check the types of data stored within the columns of the data set"
@@ -3080,7 +3080,7 @@
   {
    "cell_type": "code",
    "execution_count": 62,
-   "id": "6a3802db",
+   "id": "aafc7b5b",
    "metadata": {},
    "outputs": [
     {
@@ -3098,7 +3098,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "cad3e519",
+   "id": "47cdca6a",
    "metadata": {},
    "source": [
     "The code returns a list of all the columns that have no numeric values. It excludes the columns that have a numeric value."
@@ -3107,7 +3107,7 @@
   {
    "cell_type": "code",
    "execution_count": 64,
-   "id": "c28ff7b5",
+   "id": "bd08cc4b",
    "metadata": {},
    "outputs": [
     {
@@ -3130,7 +3130,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "182f2c85",
+   "id": "cd320013",
    "metadata": {},
    "source": [
     "The output shows that 22779 earn equal to or below 50,000 and only 7221 earning above 50,000"
@@ -3139,7 +3139,7 @@
   {
    "cell_type": "code",
    "execution_count": 70,
-   "id": "a470c1ba",
+   "id": "5dc8d31e",
    "metadata": {},
    "outputs": [
     {
@@ -3173,7 +3173,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "d1c87874",
+   "id": "9c58d95d",
    "metadata": {},
    "source": [
     "LabelEncoder() object from the sklearn.preprocessing package is imported in this code.The categorical data in each column of the data DataFrame is then encoded as numerical labels using a LabelEncoder object by iterating over each column in a loop. The data in each column are transformed into encoded labels by fitting the encoder to them using the fit transform() method.The data types of each column after encoding are displayed in the data DataFrame's dtypes attribute, which is printed last."
@@ -3182,7 +3182,7 @@
   {
    "cell_type": "code",
    "execution_count": 71,
-   "id": "3afbb166",
+   "id": "aeafb8e1",
    "metadata": {},
    "outputs": [
     {
@@ -3346,7 +3346,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "f3aae26b",
+   "id": "5697c19b",
    "metadata": {},
    "source": [
     "non-numeric values transformed to numerical values"
@@ -3355,7 +3355,7 @@
   {
    "cell_type": "code",
    "execution_count": 72,
-   "id": "82aef24f",
+   "id": "53418bac",
    "metadata": {},
    "outputs": [
     {
@@ -3385,7 +3385,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "a7cf9d20",
+   "id": "48e993f0",
    "metadata": {},
    "source": [
     "All the values are now numeric. Now, more computations and analysis can be performed on the dataset."
@@ -3394,7 +3394,7 @@
   {
    "cell_type": "code",
    "execution_count": 73,
-   "id": "e9654212",
+   "id": "e9fd7e92",
    "metadata": {},
    "outputs": [
     {
@@ -3424,7 +3424,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "47f6923f",
+   "id": "5da5f045",
    "metadata": {},
    "source": [
     "The histogram generated shows the education distribution, the x-axis represents the values of the variable and the y-axis represents the frequency of occurrence. In this case, the histogram shows the frequency of\n",
@@ -3434,7 +3434,7 @@
   {
    "cell_type": "code",
    "execution_count": 74,
-   "id": "e88b7d85",
+   "id": "380638d5",
    "metadata": {},
    "outputs": [
     {
@@ -3668,7 +3668,7 @@
   },
   {
    "cell_type": "markdown",
-   "id": "adf30824",
+   "id": "d8bd1554",
    "metadata": {},
    "source": [
     "The command returns the statistical summary of all the numerical values in the dataset"
@@ -3676,7 +3676,48 @@
   },
   {
    "cell_type": "markdown",
-   "id": "5985c24c",
+   "id": "6600b559",
+   "metadata": {},
+   "source": [
+    "## Summary Report\n",
+    "\n",
+    "The Adult dataset analysis was conducted to explore the relationship between various demographic attributes of individuals and their income levels. The dataset provides information on attributes such as age, education, occupation, marital status, and more. The goal was to perform some basic analysis using `pandas` and `matplotlib` for visualisation.\n",
+    "\n",
+    "Throughout the analysis, the following key findings and observations were made:\n",
+    "\n",
+    "- Dataset Overview:\n",
+    "\n",
+    "The initial Adult dataset consisted of a total of 32561 instances and 15 attributes but after generating our own dataset, we had 30000 total instances and dropped one column to have 14 total attributes for the new dataset.The majority of the attributes are categorical, representing different demographic characteristics of the individuals.\n",
+    "The target variable is \"income,\" which is divided into two categories: \">50K\" (income exceeding $ 50,000 per year) and \"<= 50K\" (income less than or equal to $50,000 per year).\n",
+    "\n",
+    "- Data Cleaning and Preprocessing:\n",
+    "\n",
+    "Missing values were observed in some attributes, requiring appropriate handling strategies such as imputation or removal.\n",
+    "Data inconsistencies, such as inconsistent formatting or erroneous entries, were addressed to ensure data quality.\n",
+    "\n",
+    "- Exploratory Data Analysis (EDA):\n",
+    "\n",
+    "The age distribution showed a peak around middle-age, with a gradual decline in frequency for older ages.\n",
+    "Education level was found to have a strong correlation with income, indicating that higher education generally leads to higher incomes.\n",
+    "Occupation also played a significant role in determining income levels, with certain professions having a higher likelihood of earning higher incomes.\n",
+    "Marital status showed variations in income, with married individuals tending to have higher incomes compared to unmarried individuals.\n",
+    "\n",
+    "- Feature Engineering:\n",
+    "\n",
+    "Additional features were created based on domain knowledge and data transformation techniques to enhance the predictive power of the models.\n",
+    "Categorical variables were encoded using techniques such as  label encoding to make them suitable for model training.\n",
+    "\n",
+    "- Results and Conclusion:\n",
+    "\n",
+    "Education level, occupation, and age were identified as the most influential factors in predicting income levels.\n",
+    "The analysis provided valuable insights into the demographic attributes associated with higher incomes and can be used for further research or decision-making.\n",
+    "\n",
+    "This summarized report highlights the key findings and steps undertaken during the analysis of the Adult dataset. For a more detailed analysis, including code implementation and visualizations, please refer to the provided notebooks.."
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7d5e2651",
    "metadata": {},
    "source": [
     "## End of Notebook"
